# ash

./: .editorconfig  .envrc.example  .gitignore  CLAUDE.md  LICENSE.md  Makefile  README.md  SECURITY.md
.cargo/: config.toml
.github/: COMMIT_CONVENTION.md  SECURITY.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  rfc.md
.github/workflows/: ci-android.yml  ci-backend.yml  ci-core.yml  ci-ios.yml  ci-website.yml  ci.yml  commitlint.yml  deploy-android.yml  deploy-backend.yml  deploy-ios.yml  deploy-website.yml  docker-backend.yml  release.yml  terraform.yml
apps/android/: .editorconfig  .gitignore  gradlew  settings.gradle.kts
apps/android/app/: build.gradle.kts  lint-baseline.xml  lint.xml  proguard-rules.pro
apps/android/app/src/main/: AndroidManifest.xml
apps/android/config/detekt/: baseline.xml  detekt.yml
apps/android/gradle/: libs.versions.toml
apps/ios/: README.md
apps/ios/Ash.xcworkspace/: contents.xcworkspacedata
apps/ios/Ash.xcworkspace/xcuserdata/tomas.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
apps/ios/Ash/Ash/: AshApp.swift  AshCore.swift  ContentView.swift  Info.plist
apps/ios/Ash/Ash.xcodeproj/: project.pbxproj
apps/ios/Ash/Ash.xcodeproj/xcshareddata/xcschemes/: Ash.xcscheme
apps/ios/Ash/Ash/AshIcon.icon/: icon.json
apps/ios/Ash/Ash/Assets.xcassets/ash_logo.imageset/: Contents.json
apps/ios/Ash/Ash/Core/: AppDelegate.swift  Localization.swift  Logger.swift
apps/ios/Ash/Ash/Core/DI/: Dependencies.swift
apps/ios/Ash/Ash/Core/Design/: DesignSystem.swift
apps/ios/Ash/Ash/Core/Services/: BiometricService.swift  CryptoService.swift  HapticService.swift  KeychainService.swift  LocationService.swift  MessageStorageService.swift  PadManager.swift  PushNotificationService.swift  QRScannerService.swift  RelayService.swift  SSEService.swift  SettingsService.swift
apps/ios/Ash/Ash/Data/Models/: PersistedMessage.swift
apps/ios/Ash/Ash/Data/Repositories/: InMemoryMessageRepository.swift  KeychainConversationRepository.swift  SwiftDataMessageRepository.swift
apps/ios/Ash/Ash/Domain/Entities/: Ceremony.swift  Conversation.swift  Message.swift
apps/ios/Ash/Ash/Preview Content/: ScreenshotHelper.swift
apps/ios/Ash/AshTests/: AshTests.swift
apps/ios/Ash/AshTests/Domain/: CeremonyTests.swift  ConversationTests.swift  FountainCodeTests.swift  MessageTests.swift  SendMessageUseCaseTests.swift
apps/ios/Ash/AshTests/Mocks/: MockBiometricService.swift  MockConversationRepository.swift  MockCryptoService.swift  MockKeychainService.swift  MockPadManager.swift  MockSettingsService.swift
apps/ios/Ash/AshTests/Performance/: PerformanceTests.swift
apps/ios/Ash/AshTests/Services/: BiometricServiceTests.swift  KeychainServiceTests.swift  PadManagerTests.swift  SettingsServiceTests.swift
apps/ios/Ash/AshTests/ViewModels/: AppLockViewModelTests.swift
apps/ios/Ash/AshTests/Views/: LockScreenTests.swift  SettingsScreenTests.swift
apps/ios/Ash/AshUITests/: AshUITests.swift  AshUITestsLaunchTests.swift
apps/ios/AshCore/: AshCoreFFI.h  AshCoreFFI.modulemap  Package.swift
apps/ios/AshCore/Sources/: AshCore.swift  AshCoreFFI.h
apps/ios/ci_scripts/: ci_post_clone.sh
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  Dockerfile.artifact  README.md
backend/src/: apns.rs  auth.rs  config.rs  expiry.rs  handlers.rs  lib.rs  main.rs  models.rs  store.rs
backend/tests/: api_integration.rs  e2e_with_core.rs
bindings/: Cargo.toml  build.rs  uniffi.toml
bindings/src/: ash.udl  lib.rs
core/: Cargo.toml
core/src/: auth.rs  ceremony.rs  crc.rs  error.rs  fountain.rs  frame.rs  gf128.rs  lib.rs  mac.rs  message.rs  mnemonic.rs  otp.rs  pad.rs  pad_calculator.rs  passphrase.rs  poly_hash.rs  raptor.rs  wordlist.rs
docs/: appstore-description.md  architecture.md  backend-contract.md  bis-self-classification-report.md  ceremony.md  data-lifecycle.md  ethics.md  export-compliance.md  framing.md  glosarry.md  glossary.md  logo-design-brief.md  persistent-messages.md  scope.md  thread-model.md  threat-model.md
infra/docker/: Dockerfile.backend  Dockerfile.nginx  docker-compose.yml
infra/nginx/: nginx.conf
infra/nginx/conf.d/: ash-relay.conf
infra/scaleway/: .gitignore  README.md  bootstrap.sh  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/scaleway/environments/: beta.tfvars  prod.tfvars
scripts/: build-android.sh  build-ios.sh  patch-swift6.sh
wasm/: Cargo.toml
wasm/src/: lib.rs
website/: package-lock.json  package.json  pnpm-lock.yaml  wrangler.toml
website/public/wasm/: ash_wasm.d.ts  ash_wasm.js  ash_wasm_bg.wasm  ash_wasm_bg.wasm.d.ts
website/src/components/: Button.astro  Diagram.astro  FeatureCard.astro  Footer.astro  Header.astro  InfoBox.astro  MessagePipelineDemo.tsx  MnemonicDemo.tsx  OTPDemo.tsx  PaddingDemo.tsx  PhoneMockup.astro  PolyHashDemo.tsx  ProtocolDemo.tsx  Section.astro  TableOfContents.astro  TokenDemo.tsx  WhitepaperViewToggle.tsx
website/src/layouts/: Layout.astro
website/src/pages/: docs.astro  ethics.astro  index.astro  infrastructure.astro  privacy.astro  security.astro  support.astro  terms.astro  whitepaper.astro
website/src/styles/: global.css
(+111 files in other folders)
