[package]
name = "ash-backend"
version = "0.1.0"
edition = "2021"
description = "ASH relay server - minimal untrusted message relay"
license = "MIT"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
bytes = "1"
hex = "0.4"

# Cryptographic hashing (for auth tokens)
ring = "0.17"

# Async utilities
parking_lot = "0.12"
dashmap = "6"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
async-stream = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# APNS (Apple Push Notification Service)
a2 = "0.10"

# Configuration
dotenvy = "0.15"

# Error handling
thiserror = "1"
anyhow = "1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
