[package]
name = "ash-backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "ASH relay server - minimal untrusted message relay for ephemeral encrypted messaging"
license = "MIT"
repository = "https://github.com/monadial/ash"
keywords = ["messaging", "encryption", "ephemeral", "relay", "otp"]
categories = ["network-programming", "cryptography"]

[lints.rust]
unsafe_code = "forbid"
# Allow dead code for API functions designed for future use
dead_code = "allow"

[lints.clippy]
# Lint groups with lower priority so individual lints can override
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow common patterns
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Async functions designed for interface compatibility
unused_async = "allow"
# Doc style (backticks for code spans)
doc_markdown = "allow"
# Allow map().unwrap_or patterns (more readable in some contexts)
map_unwrap_or = "allow"
# Allow if-let patterns vs let-else (style preference)
if_not_else = "allow"
option_if_let_else = "allow"
manual_let_else = "allow"
# Duration subtraction is intentional
unchecked_duration_subtraction = "allow"
# Allow wildcard imports in prelude-style modules
wildcard_imports = "allow"
# Closure style (sometimes clearer)
redundant_closure = "allow"
redundant_closure_for_method_calls = "allow"
# Unit type matching
match_wild_err_arm = "allow"
unit_arg = "allow"
ignored_unit_patterns = "allow"
# Struct naming
struct_field_names = "allow"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
bytes = "1"
hex = "0.4"

# Cryptographic hashing (for auth tokens)
ring = "0.17"

# Async / concurrent data structures
dashmap = "6"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# APNS (Apple Push Notification Service)
a2 = "0.10"

# Configuration
dotenvy = "0.15"

# Error handling
thiserror = "1"

[dev-dependencies]
axum-test = "16"
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release-debug]
inherits = "release"
debug = true
strip = false
