[package]
name = "ash-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for ASH cryptographic core"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ash-core = { path = "../core" }
wasm-bindgen = "0.2"

# Optimize for small WASM size
[profile.release]
opt-level = "s"
lto = true
